refactor: DatabasePopulatorUtils try-with-resources 기반으로 수정